Revision history for {{$dist->name}}

{{$NEXT}}

0.046     2014-01-11 19:23:31Z
          - ensure that .pod files are also eligible for indexing
          - minting profile switched to using a dist sharedir to store
            profiles, so we can now ship using Module::Build::Tiny

0.045     2014-01-06 18:32:05Z
          - fixed transposed link text in documentation (thanks, rwstauner!)
          - fixed new tests that fail when run outside a git repository

0.044     2014-01-04 18:46:04Z
          - adjust airplane mode so it performs all (non-network) pre-release
            checks first, before aborting the release
          - minor tweaks to CONTRIBUTING text

0.043     2013-12-14 17:34:14Z
          - stale [@Git] modules now being checked for again

0.042     2013-12-08 00:24:09Z
          - drop use of [-Encoding] Pod::Weaver plugin - no longer needed with
            Pod::Weaver 4
          - update generated CONTRIBUTING file to filter out local plugins
            when running 'dzil authordeps --missing', and to mention the irc
            channel when available
          - new "airplane" mode, to faciliate development while the network is
            not available

0.041     2013-11-29 06:02:08Z
          - add explicit dep on Pod::Markdown, to get the version that creates
            metacpan hyperlinks
          - add [Test::Portability]
          - no longer prompting about stale [@Git] modules

0.040     2013-11-12 17:50:39Z
          - [Git::CheckFor::MergeConflicts] is working again
          - work around failure of minting test where a development release of
            a plugin is required to generate all expected files

0.039     2013-11-11 02:30:24Z
          - fix config for [Git::Commit], to properly commit files that were
            newly added to the dist
          - now generating full starting content for CONTRIBUTING, README.md,
            LICENSE when minting a new distribution

0.038     2013-11-09 22:46:12Z