@@ -52,7 +52,7 @@ Dist::Zilla::Plugin::Test::Portability = 0
 Dist::Zilla::Plugin::PruneCruft = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::Git::Describe = 0
-Dist::Zilla::Plugin::PkgVersion = 4.300036
+Dist::Zilla::Plugin::PkgVersion = 5.010
 Dist::Zilla::Plugin::PodWeaver = 4.005
 Dist::Zilla::Plugin::NextRelease = 4.300018
 Dist::Zilla::Plugin::AutoMetaResources = 0
