@@ -79,7 +79,7 @@ foreach my $server (keys %server_to_resources)
                       },
                     ],
                 ),
-                path(qw(source lib MyModule.pm)) => 'package MyModule; 1',
+                path(qw(source lib MyModule.pm)) => "package MyModule;\n\n1",
             },
         },
     );
