@@ -36,7 +36,7 @@ use Helper;
                       },
                     ],
                 ),
-                path(qw(source lib MyDist.pm)) => 'package MyDist; 1',
+                path(qw(source lib MyDist.pm)) => "package MyDist;\n\n1",
             },
         },
     );
@@ -88,7 +88,7 @@ SKIP: {
                       },
                     ],
                 ),
-                path(qw(source lib MyModule.pm)) => 'package MyModule; 1',
+                path(qw(source lib MyModule.pm)) => "package MyModule;\n\n1",
             },
         },
     );
